RESOLVED FIXED81614
Stop messing with the AppKit grow box on platforms that don't support it
https://bugs.webkit.org/show_bug.cgi?id=81614
Summary Stop messing with the AppKit grow box on platforms that don't support it
Sam Weinig
Reported 2012-03-19 18:38:30 PDT
Stop messing with the AppKit grow box on platforms that don't support it
Attachments
Patch (2.49 KB, patch)
2012-03-19 18:39 PDT, Sam Weinig
mitz: review+
Sam Weinig
Comment 1 2012-03-19 18:39:28 PDT
Sam Weinig
Comment 2 2012-03-19 18:45:57 PDT
Note You need to log in before you can comment on or make changes to this bug.