Stop messing with the AppKit grow box on platforms that don't support it <rdar://problem/10752048> https://bugs.webkit.org/show_bug.cgi?id=81614

Reviewed by Dan Bernstein.

* UIProcess/API/mac/WKView.mm:
(-[WKView viewWillMoveToWindow:]):
(-[WKView _didChangeScrollbarsForMainFrame]):
Snow Leopard was the last Mac OS to need a grow box.


Canonical link: https://commits.webkit.org/98832@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111299 268f45cc-cd09-0410-ab3c-d52691b4dbfc